kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockwell-docs
  namespace: static
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: blockwell-docs
    spec:
      containers:
        - name: public
          image: docker.blockwell.ai/blockwell-docs
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 0.05G
              cpu: 0.05
            limits:
              memory: 0.1G
              cpu: 0.2
  selector:
    matchLabels:
      app: blockwell-docs
