kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockwell-docs
  namespace: static
spec:
  type: ClusterIP
  selector:
    app: blockwell-docs
  ports:
    - port: 80
      targetPort: http
